<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Firebase App</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="logout">Đăng xuất</string>
    <string name="add_user">Thêm người dùng</string>
    <string name="username">Tên tài khoản</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="delete">Xóa</string>
    <string name="select_image">Chọn ảnh</string>
    <string name="user_list">Danh sách người dùng</string>
</resources>